fix(theme): tweak responsive gap

--- a/packages/saber-theme-mina/styles/components/base.scss
+++ b/packages/saber-theme-mina/styles/components/base.scss
@@ -64,7 +64,7 @@ a {
   flex: 1 0 auto;
   margin: 0 auto;
   max-width: $desktop;
-  padding: $gap-l $gap-l 0;
+  padding: $gap-m $gap-m 0;
   width: 100%;
 }
 h1, h2, h3, h4, h5, h6 {
