--- a/packages/saber-theme-mina/styles/components/index.scss
+++ b/packages/saber-theme-mina/styles/components/index.scss
@@ -3,10 +3,6 @@
   flex-wrap: wrap;
   padding: 0;
 
-  .post-card-wrap.column {
-    padding: $gap-s;
-  }
-
   .post-card-wrap {
     display: flex;
   }
